--- a/app/views/parents/dashboard.html.erb
+++ b/app/views/parents/dashboard.html.erb
@@ -1,2 +1,59 @@
-<h1>Parents#dashboard</h1>
-<p>Find me in app/views/parents/dashboard.html.erb</p>
+<!-- Dashboad components: -->
+<!-- add child button, children list with status -->
+<!-- create task button, mandatory tasks list -->
+<!-- create reward button, daily rewards list  -->
+
+<div class="container">
+<h2>Welcome!</h2>
+<!-- Check if parent (& child) logged in, for testing purpose only -->
+<h5>Logged in as: <%= current_parent.email %></h5>
+<%= current_child.email if current_child %>
+<!------->
+
+<div class="tasks-info">
+  <h3>Tasks:</h3>
+  <div class="container">
+    <% @tasks.each do |t| %>
+      <li>
+        <%= link_to task_path(t) do %>
+          <%= t.objective %>
+        <% end %>
+      </li>
+    <% end %>
+  </div>
+</div>
+
+<div class="rewards-info">
+  <h3>Rewards:</h3>
+  <div class="container">
+    <% @rewards.each do |r| %>
+      <li>
+        <%= link_to reward_path(r) do %>
+          <%= r.name %>
+        <% end %>
+      </li>
+    <% end %>
+  </div>
+</div>
+
+<hr>
+
+<div class="children-info">
+  <div class="btn-add-child">
+    <%= link_to new_child_path do %>
+      Add a child
+    <% end %>
+  </div>
+
+  <div class="childrens-list">
+    <% current_parent.children.each do |child| %>
+      <li>
+        <%#= link_to child_path(child) do %>
+          <%= child.email %>
+        <%# end %>
+      </li>
+    <% end %>
+  </div>
+</div>
+
+</div>
