--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,10 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+  <div class="split left">
+    <h1>WELCOME</h1>
+    <a href="#" class="button">For Adults</a>
+  </div>
+  <div class="split right">
+    <h1>WELCOME</h1>
+    <a href="#" class="button">For Kids</a>
+  </div>
+</div>
