changed modal class name

--- a/app/views/parents/dashboard.html.erb
+++ b/app/views/parents/dashboard.html.erb
@@ -32,7 +32,7 @@
 <button id="btn-task-modal"> add task modal</button>
 
 <!-- The Modal -->
-<div id="myModal" class="modal">
+<div id="taskModal" class="modal">
 
   <!-- Modal content -->
   <div class="modal-content">
@@ -87,7 +87,7 @@
 </div>
 
 <script>
-  var modal = document.getElementById('myModal');
+  var modal = document.getElementById('taskModal');
 
 // Get the button that opens the modal
 var btn = document.getElementById("btn-task-modal");
