logic on homepage and link to dashboard or playground after sign in

--- a/app/views/parents/dashboard.html.erb
+++ b/app/views/parents/dashboard.html.erb
@@ -49,6 +49,7 @@
     <% current_parent.children.each do |child| %>
       <li>
         <%#= link_to child_path(child) do %>
+        <!-- do a modal to display child info -->
           <%= child.email %>
         <%# end %>
       </li>
