--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,152 +1,1 @@
-:root {
-  --container-bg-color: #333;
-  --left-bg-color: rgba(244, 222, 205, 1);
-  --left-button-hover-color: rgba(244, 222, 205, 0.3);
-  --right-bg-color: rgba(119, 201, 212, 0.6);
-  --right-button-hover-color: rgba(119, 201, 212, 0.3);
-  --hover-width: 75%;
-  --other-width: 25%;
-  --speed: 1000ms;
-}
-
-html, body {
-  padding:0;
-  margin:0;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
-}
-
-h1 {
-  font-size: 7rem;
-  color: #fff;
-  position: absolute;
-  left: 50%;
-  top: 20%;
-  transform: translateX(-50%);
-  white-space: nowrap;
-}
-
-.button {
-  display: block;
-  position: absolute;
-  left: 50%;
-  top: 70%;
-  //height: 2.5rem;
-  //padding-top: 4rem;
-  width: 20rem;
-  text-align: center;
-  color: #fff;
-  border: #fff solid 0.4rem;
-  font-size: 8rem;
-  font-weight: bold;
-  text-transform: uppercase;
-  text-decoration: none;
-  transform: translateX(-50%);
-}
-
-.split.left .button:hover {
-  background-color: var(--left-button-hover-color);
-  border-color: var(--left-button-hover-color);
-}
-
-.split.right .button:hover {
-  background-color: var(--right-button-hover-color);
-  border-color: var(--right-button-hover-color);
-}
-
-.container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background: var(--container-bg-color);
-}
-
-.split {
-  position: absolute;
-  width: 50%;
-  height: 100%;
-  overflow: hidden;
-}
-
-.split.left {
-  left:0;
-  background: #f4dec center center no-repeat;
-  background-size: cover;
-}
-
-.split.left:before {
-  position:absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  background: var(--left-bg-color);
-}
-
-.split.right {
-  right:0;
-  background: url('https://www.lego.com/portalskins/lego.com-css/1.0.0/assets/split__kids-art.9b8a13e0f62badb14f7c0696cf0419e8.png') center center no-repeat;
-  background-size: cover;
-}
-
-.split.right:before {
-  position:absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  background: var(--right-bg-color);
-}
-
-.split.left, .split.right, .split.right:before, .split.left:before {
-  transition: var(--speed) all ease-in-out;
-}
-
-.hover-left .left {
-  width: var(--hover-width);
-}
-
-.hover-left .right {
-  width: var(--other-width);
-}
-
-.hover-left .right:before {
-  z-index: 2;
-}
-
-
-.hover-right .right {
-  width: var(--hover-width);
-}
-
-.hover-right .left {
-  width: var(--other-width);
-}
-
-.hover-right .left:before {
-  z-index: 2;
-}
-
-@media(max-width: 800px) {
-  h1 {
-    font-size: 10rem;
-  }
-
-  .button {
-    width: 12rem;
-  }
-}
-
-@media(max-height: 700px) {
-  .button {
-    top: 70%;
-  }
-}
-
-
-a:hover, a:focus {
-  color: #fff;
-  text-decoration: none;
-  }
-
-
+// Specific CSS for your home-page
