--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,79 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container text-center">
+  <div class="homepage-banner" style="background-image: url('<%= image_path 'family_static' %>')">
+
+  </div>
+</div>
+<div class="container">
+  <div class="img-group">
+    <div class="row">
+        <!-- one col is one photo or one text box -->
+        <div class="img-text-combo">
+            <div class="col-xs-12 col-sm-6">
+                <%= image_tag 'distracted_egg.gif', class: 'img-gifs' %>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+                <div class="text-card">
+                    <h5>Dealing with playful children?</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <!-- one col is one photo or one text box -->
+        <div class="img-text-combo">
+            <div class="col-xs-12 col-sm-6">
+                <div class="text-card">
+                    <h5>Working hard to become a better parent?</h5>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+                <%= image_tag 'avocado.gif', class: 'img-gifs' %>
+            </div>
+        </div>
+    </div>
+  </div>
+  <div class="img-group-odd">
+    <div class="row">
+        <!-- one col is one photo or one text box -->
+        <div class="img-text-combo">
+            <div class="col-xs-12 col-sm-6">
+                <%= image_tag 'chicken_teamwork.gif', class: 'img-gifs' %>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+                <div class="text-card">
+                    <h5>Team up and share the work with your children.</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <!-- one col is one photo or one text box -->
+        <div class="img-text-combo">
+            <div class="col-xs-12 col-sm-6">
+                <div class="text-card">
+                    <h5>Get the job done and have more time to yourself.</h5>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+                <%= image_tag 'playful_grownup.gif', class: 'img-gifs' %>
+            </div>
+        </div>
+    </div>
+  </div>
+  <div class="img-group">
+    <div class="row">
+        <!-- one col is one photo or one text box -->
+        <div class="img-text-combo">
+            <div class="col-xs-12 col-sm-offset-1 col-sm-5">
+                <%= image_tag 'better_parent.gif', class: 'img-gifs' %>
+            </div>
+            <div class="col-xs-12 col-sm-offset-1 col-sm-5">
+                <div class="text-card">
+                    <h5>Spend more quality time together!</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
+</div>
