--- a/app/views/children/playground.html.erb
+++ b/app/views/children/playground.html.erb
@@ -7,6 +7,7 @@
 <%= task.objective %>
 <% end %></p>
 <p><%= task.key_results %></p>
+<%= cl_image_tag task.photo, height: 300, width: 400, crop: :fill %>
 </li>
 <% end %>
 </ul>
