--- a/app/views/parents/dashboard.html.erb
+++ b/app/views/parents/dashboard.html.erb
@@ -38,10 +38,13 @@
   <%= f.input :objective %>
   <%= f.input :key_results %>
   <%= f.input :mandatory %>
+
   <% @list = current_parent.children.map do |child| %>
   <% [child.id, child.email] %>
   <% end %>
     <%= f.input :child_id, collection: @list , label_method: :second, value_method: :first %>
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
   <%= f.submit 'Add Task' %>
 <% end %>
   </div>
