--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,35 @@
-<h2>Sign up as a better parent</h2>
-
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
+<div class="signup-container-wrapper">
+  <div class="container">
+  <div class="row" id="signup-center">
+    <div class="col-md-6 col-md-offset-3">
+      <h2>Sign up as a parent</h2>
+      <br>
+      <div class="form-inputs">
+        <%= f.input :email,
+                    required: true,
+                    autofocus: true ,
+                    input_html: { autocomplete: "email" }%>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true ,
-                input_html: { autocomplete: "email" }%>
-
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
-               <% if parent_signed_in?   %>
-    <%= f.input :parent_id, as: :hidden, input_html: { value: current_parent.id} %>
-    <% end %>
+        <%= f.input :password,
+                    required: true,
+                    hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                    input_html: { autocomplete: "new-password" } %>
+        <%= f.input :password_confirmation,
+                    required: true,
+                    input_html: { autocomplete: "new-password" } %>
+                   <% if parent_signed_in?   %>
+        <%= f.input :parent_id, as: :hidden, input_html: { value: current_parent.id} %>
+        <% end %>
+          <div class="form-actions">
+            <%= f.button :submit, "Sign up", class: 'btn btn-lg btn-primary'%>
+          </div>
+        <% end %>
+        <br>
+        <p> Already a member? <%= render "devise/shared/links" %></p>
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
+</div>
