--- a/app/views/parents/dashboard.html.erb
+++ b/app/views/parents/dashboard.html.erb
@@ -13,20 +13,25 @@
   <div class="container">
     <ul>
     <%  @tasks.each do |t| %>
-      <li>
-        <%= t.objective %>
-        <%= t.key_results %>
-      </li>
+    <!-----button---->
+        <p id="button" class="test"><%= t.objective %></p>
+<!-- The Modal -->
+<div id="modal>" class="modal">
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+      <%= t.key_results %>
+      <br>
+      <br>
+      <p> Example </p>
+      <%= cl_image_tag t.photo, height: 300, width: 400, crop: :fill %>
+        </div>
+      </div>
     <% end %>
   </div>
 </div>
-
-<!-----------eventlistener on button ---->
-
-
 <!-- Trigger/Open The Modal -->
-<button id="btn-task-modal"> add task modal</button>
-
+ <p id="button" class="test">Add Tasks</p>
 <!-- The Modal -->
 <div id="taskModal" class="modal">
   <!-- Modal content -->
@@ -89,37 +94,62 @@
 </div>
 </div>
 <script>
-  var modal = document.getElementById('taskModal');
+  let modal = document.getElementsByClassName('modal');
 
 // Get the button that opens the modal
-var btn = document.getElementById("btn-task-modal");
+// let btn = document.getElementById("btn-task-modal");
 
 // Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
+// let span = document.getElementsByClassName("close")[0];
 
 // When the user clicks on the button, open the modal
-btn.onclick = function() {
-    modal.style.display = "block";
-}
+// btn.onclick = function() {
+//     modal.style.display = "block";
+// }
 
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-    modal.style.display = "none";
-}
+// // When the user clicks on <span> (x), close the modal
+// span.onclick = function() {
+//     modal.style.display = "none";
+// }
 
 // When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    if (event.target == modal) {
-        modal.style.display = "none";
-    }
+
+// window.onclick = function(event) {
+//     if (Array.from(modal).includes(event.target)) {
+//         modal.style.display = "none";
+//     }
+// }
+
+
+let test = document.querySelectorAll(".test")
+
+let myFunction = function(i) {
+   modal[i].style.display = "block";
+};
+
+for (let i = 0; i < test.length; i++) {
+    test[i].onclick = function(event) {
+      console.log(event.target)
+      myFunction(Array.from(test).indexOf(event.target))};
+}
+
+let closes = document.querySelectorAll(".close")
+
+let closeModal = function(i) {
+   modal[i].style.display = "none";
+};
+
+for (let i = 0; i < closes.length; i++) {
+    closes[i].onclick = function(event) {
+      closeModal(Array.from(closes).indexOf(event.target))};
 }
 
 
-// var test = document.getElementById('popup');
+// let test = document.getElementById('popup');
 
 // test.onclick = function () {
-//   var popup
-//     var popup = document.getElementById("myPopup");
+//   let popup
+//     let popup = document.getElementById("myPopup");
 //     popup.classList.toggle("show");
 // }
 
