--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,29 @@
-<h2>Sign up as a better parent</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email,
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 col-md-6 col-md-offset-3">
+            <h2>Sign up as a better parent</h2>
+            <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= f.error_notification %>
+            <div class="form-inputs">
+                <%= f.input :email,
                 required: true,
                 autofocus: true ,
                 input_html: { autocomplete: "email" }%>
-
-    <%= f.input :password,
+                <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
                 input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
+                <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
-               <% if parent_signed_in?   %>
-    <%= f.input :parent_id, as: :hidden, input_html: { value: current_parent.id} %>
-    <% end %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+                <% if parent_signed_in?   %>
+                <%= f.input :parent_id, as: :hidden, input_html: { value: current_parent.id} %>
+                <% end %>
+            </div>
+            <div class="form-actions">
+                <%= f.button :submit, "Sign up" %>
+            </div>
+            <% end %>
+        </div>
+    </div>
+</div>
