--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,15 @@
-<div class="container text-center">
-  <div class="homepage-banner" style="background-image: url('<%= image_path 'family_static' %>')">
-
-  </div>
+<div class="homepage-banner" style="background-image: url('<%= image_path 'painful_grownup' %>')">
+  <div class="container banner-text">
+<h2>Human Beans</h2>
+<h5>Help your child to become a better being.</h5>
 </div>
-<div class="container">
-  <div class="img-group">
+</div>
+
+<!--   <div class="img-group">
     <div class="row">
-        <!-- one col is one photo or one text box -->
         <div class="img-text-combo">
             <div class="col-xs-12 col-sm-6">
-                <%= image_tag 'distracted_egg.gif', class: 'img-gifs' %>
+                <%#= image_tag 'distracted_egg.gif', class: 'img-gifs' %>
             </div>
             <div class="col-xs-12 col-sm-6">
                 <div class="text-card">
@@ -20,7 +20,6 @@
     </div>
 
     <div class="row">
-        <!-- one col is one photo or one text box -->
         <div class="img-text-combo">
             <div class="col-xs-12 col-sm-6">
                 <div class="text-card">
@@ -28,7 +27,22 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6">
-                <%= image_tag 'avocado.gif', class: 'img-gifs' %>
+                <%#= image_tag 'avocado.gif', class: 'img-gifs' %>
+            </div>
+        </div>
+    </div>
+  </div> -->
+  <div class="img-group">
+    <div class="row">
+        <!-- one col is one photo or one text box -->
+        <div class="img-text-combo">
+            <div class="col-xs-12 col-sm-6 col-md-offset-2 col-md-3">
+                <%= image_tag 'chicken_teamwork.gif', class: 'img-gifs' %>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-offset-2 col-md-3">
+                <div class="text-card">
+                    <h5>Team up and share the work with your children.</h5>
+                </div>
             </div>
         </div>
     </div>
@@ -37,38 +51,25 @@
     <div class="row">
         <!-- one col is one photo or one text box -->
         <div class="img-text-combo">
-            <div class="col-xs-12 col-sm-6">
-                <%= image_tag 'chicken_teamwork.gif', class: 'img-gifs' %>
-            </div>
-            <div class="col-xs-12 col-sm-6">
-                <div class="text-card">
-                    <h5>Team up and share the work with your children.</h5>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <!-- one col is one photo or one text box -->
-        <div class="img-text-combo">
-            <div class="col-xs-12 col-sm-6">
+            <div class="col-xs-12 col-sm-6 col-md-offset-2 col-md-3">
                 <div class="text-card">
                     <h5>Get the job done and have more time to yourself.</h5>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6">
+            <div class="col-xs-12 col-sm-6 col-md-offset-2 col-md-3">
                 <%= image_tag 'playful_grownup.gif', class: 'img-gifs' %>
             </div>
         </div>
     </div>
   </div>
+
   <div class="img-group">
     <div class="row">
-        <!-- one col is one photo or one text box -->
         <div class="img-text-combo">
-            <div class="col-xs-12 col-sm-offset-1 col-sm-5">
+            <div class="col-xs-12 col-sm-6 col-md-offset-2 col-md-3">
                 <%= image_tag 'better_parent.gif', class: 'img-gifs' %>
             </div>
-            <div class="col-xs-12 col-sm-offset-1 col-sm-5">
+            <div class="col-xs-12 col-sm-6 col-md-offset-2 col-md-3">
                 <div class="text-card">
                     <h5>Spend more quality time together!</h5>
                 </div>
@@ -76,4 +77,5 @@
         </div>
     </div>
   </div>
-</div>
+
+
