--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,6 +4,7 @@ body {
 }
 
 .homepage-banner {
+  border: 3px solid yellow;
   background-position: right;
   background-repeat: no-repeat;
   height: 70vh;
@@ -13,6 +14,10 @@ body {
 .banner-text {
   border: 1px solid black;
   padding: 30px;
+  width: 40%;
+  position: absolute;
+  top: 20%;
+  left: 10%;
 }
 
 .img-group, .img-group-odd {
@@ -40,11 +45,11 @@ body {
 
 .img-gifs, .text-card {
   width: 100%;
+  height: 100%;
   // borders are for testing purpose
   border: 3px solid red;
 }
 
 
-.text-card h5 {
-  font-size: 24px;
+.text-card {
 }
