--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,45 +1,25 @@
 <div class="homepage-banner" style="background-image: url('<%= image_path 'painful_grownup' %>')">
+
   <div class="container banner-text">
-<h2>Human Beans</h2>
-<h5>Help your child to become a better being.</h5>
+<h3>Working hard to become a better parent?</h3>
+<h5>When your children are blah blah blah annoyed, distracted, bored, unwilling to complete their tasks, we've got you covered blah blah. Help your child to become a better being.</h5>
+<%= link_to new_parent_registration_path do %>
+Get Started
+<% end %>
+
 </div>
 </div>
 
-<!--   <div class="img-group">
-    <div class="row">
-        <div class="img-text-combo">
-            <div class="col-xs-12 col-sm-6">
-                <%#= image_tag 'distracted_egg.gif', class: 'img-gifs' %>
-            </div>
-            <div class="col-xs-12 col-sm-6">
-                <div class="text-card">
-                    <h5>Dealing with playful children?</h5>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <div class="row">
-        <div class="img-text-combo">
-            <div class="col-xs-12 col-sm-6">
-                <div class="text-card">
-                    <h5>Working hard to become a better parent?</h5>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-6">
-                <%#= image_tag 'avocado.gif', class: 'img-gifs' %>
-            </div>
-        </div>
-    </div>
-  </div> -->
+<div class="container">
   <div class="img-group">
     <div class="row">
         <!-- one col is one photo or one text box -->
         <div class="img-text-combo">
-            <div class="col-xs-12 col-sm-6 col-md-offset-2 col-md-3">
+            <div class="col-xs-12 col-sm-6">
                 <%= image_tag 'chicken_teamwork.gif', class: 'img-gifs' %>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-offset-2 col-md-3">
+            <div class="col-xs-12 col-sm-6">
                 <div class="text-card">
                     <h5>Team up and share the work with your children.</h5>
                 </div>
@@ -51,12 +31,12 @@
     <div class="row">
         <!-- one col is one photo or one text box -->
         <div class="img-text-combo">
-            <div class="col-xs-12 col-sm-6 col-md-offset-2 col-md-3">
+            <div class="col-xs-12 col-sm-6">
                 <div class="text-card">
                     <h5>Get the job done and have more time to yourself.</h5>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-offset-2 col-md-3">
+            <div class="col-xs-12 col-sm-6">
                 <%= image_tag 'playful_grownup.gif', class: 'img-gifs' %>
             </div>
         </div>
@@ -66,10 +46,10 @@
   <div class="img-group">
     <div class="row">
         <div class="img-text-combo">
-            <div class="col-xs-12 col-sm-6 col-md-offset-2 col-md-3">
+            <div class="col-xs-12 col-sm-6">
                 <%= image_tag 'better_parent.gif', class: 'img-gifs' %>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-offset-2 col-md-3">
+            <div class="col-xs-12 col-sm-6">
                 <div class="text-card">
                     <h5>Spend more quality time together!</h5>
                 </div>
@@ -78,4 +58,9 @@
     </div>
   </div>
 
+
+  <div class="homepage-footer">
+
+  </div>
+</div>
 
