--- a/app/views/parents/dashboard.html.erb
+++ b/app/views/parents/dashboard.html.erb
@@ -2,97 +2,108 @@
 <!-- add child button, children list with status -->
 <!-- create task button, mandatory tasks list -->
 <!-- create reward button, daily rewards list  -->
-
-<div class="container">
-<h2>Welcome!</h2>
-<h5>(<%= current_parent.email %>)</h5>
-
-<hr>
-<div class="tasks-info">
-  <h3>Tasks:</h3>
-  <div class="container">
-    <ul>
-    <%  @tasks.each do |t| %>
+<div class="row">
+  <div class="col-xs-6 col-md-4">
+    <h2>Welcome!</h2>
+    <h5>(<%= current_parent.email %>)</h5>
+  </div>
+<div class="col-xs-6 col-md-4">
+  <div class="tasks-info">
+    <h3>Tasks:</h3>
+      <div class="container">
+        <ul>
+          <%  @tasks.each do |t| %>
     <!-----button---->
-        <p id="button" class="test"><%= t.objective %></p>
+            <p id="button" class="test"><%= t.objective %></p>
 <!-- The Modal -->
-<div id="modal>" class="modal">
+              <div id="modal>" class="modal">
   <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">&times;</span>
-      <%= t.key_results %>
-      <br>
-      <br>
-      <p> Example </p>
-      <%= cl_image_tag t.photo, height: 300, width: 400, crop: :fill %>
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                    <%= t.key_results %>
+                      <br>
+                      <br>
+                      <p> Example </p>
+                      <%= cl_image_tag t.photo, height: 300, width: 400, crop: :fill %>
+                </div>
+              </div>
+          <% end %>
+<!-- Trigger/Open The Modal -->
+            <p id="button" class="test">Add Tasks</p>
+<!-- The Modal -->
+              <div id="taskModal" class="modal">
+  <!-- Modal content -->
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                    <%= simple_form_for @task do |f| %>
+                      <%= f.input :objective %>
+                      <%= f.input :key_results %>
+                      <%= f.input :mandatory %>
+                      <% @list = current_parent.children.map do |child| %>
+                      <% [child.id, child.email] %>
+                      <% end %>
+                        <%= f.input :child_id, collection: @list , label_method: :second, value_method: :first %>
+                      <%= f.input :photo %>
+                      <%= f.input :photo_cache, as: :hidden %>
+                      <%= f.submit 'Add Task' %>
+                    <% end %>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      <div class="col-xs-6 col-md-4">
+        <div class="rewards-info">
+          <h3>Rewards:</h3>
+            <div class="container">
+              <% @rewards.each do |r| %>
+                  <%= r.name %>
+              <% end %>
+            <p id="button" class="test">Add Rewards</p>
+<!-- The Modal -->
+          <div id="taskModal" class="modal">
+  <!-- Modal content -->
+            <div class="modal-content">
+              <span class="close">&times;</span>
+                <%= simple_form_for [@reward] do |f| %>
+                <%= f.input :name , label: 'Reward'%>
+                <%= f.input :details %>
+                <%= f.input :price , label: 'Points needed'%>
+                <%= f.input :child_id, collection: @list , label_method: :second, value_method: :first %>
+                <%= f.button :button, type: :submit %>
+                <% end %>
+            </div>
+          </div>
         </div>
       </div>
-    <% end %>
-  </div>
-</div>
-<!-- Trigger/Open The Modal -->
- <p id="button" class="test">Add Tasks</p>
-<!-- The Modal -->
-<div id="taskModal" class="modal">
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">&times;</span>
-<%= simple_form_for @task do |f| %>
-  <%= f.input :objective %>
-  <%= f.input :key_results %>
-  <%= f.input :mandatory %>
+        <div class="children-info">
+          <div class="btn-add-child">
+            <%= link_to new_child_path do %>
+              Add a child
+            <% end %>
+          </div>
+            <div class="childrens-list">
+              <ul>
+                <% current_parent.children.each do |child| %>
+                <li>
+                    <p>Child: <%= child.email %></p>
+                      <% child.tasks.each do |task| %>
+                     <p>Task: <%= task.objective %></p>
+                     <% end %>
+                </li>
+                <% end %>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
 
-  <% @list = current_parent.children.map do |child| %>
-  <% [child.id, child.email] %>
-  <% end %>
-    <%= f.input :child_id, collection: @list , label_method: :second, value_method: :first %>
-  <%= f.input :photo %>
-  <%= f.input :photo_cache, as: :hidden %>
-  <%= f.submit 'Add Task' %>
-<% end %>
-  </div>
 
-</div>
+
+
 <!------------------------------------------->
-<div class="rewards-info">
-  <h3>Rewards:</h3>
-  <div class="container">
-    <% @rewards.each do |r| %>
-      <li>
-        <%= link_to reward_path(r) do %>
-          <%= r.name %>
-        <% end %>
-      </li>
-    <% end %>
-  </div>
-</div>
 
-<hr>
-
-<div class="children-info">
-  <div class="btn-add-child">
-    <%= link_to new_child_path do %>
-      Add a child
-    <% end %>
-  </div>
-
-  <div class="childrens-list">
-    <% current_parent.children.each do |child| %>
-      <li>
-          <%= child.email %>
-          <ul>
-         <% child.tasks.each do |task| %>
-         <li>
-         <%= task.objective %>
-         </li>
-         <% end %>
-         </ul>
-        <%# end %>
-      </li>
-    <% end %>
-  </div>
-</div>
-</div>
 <script>
   let modal = document.getElementsByClassName('modal');
 
@@ -154,3 +165,5 @@ for (let i = 0; i < closes.length; i++) {
 // }
 
 </script>
+
+
