--- a/app/views/parents/dashboard.html.erb
+++ b/app/views/parents/dashboard.html.erb
@@ -6,106 +6,79 @@
   <div class="col-xs-6 col-md-4">
     <h2>Welcome!</h2>
     <h5>(<%= current_parent.email %>)</h5>
+    <%= render 'addchild' %>
+    <%= render 'rewards' %>
   </div>
-<div class="col-xs-6 col-md-4">
-  <div class="tasks-info">
-    <h3>Tasks:</h3>
+  <div class="col-xs-6 col-md-4">
+    <div class="tasks-info">
+      <h3>Tasks:</h3>
       <div class="container">
         <ul>
           <%  @tasks.each do |t| %>
-    <!-----button---->
-            <p id="button" class="test"><%= t.objective %></p>
-<!-- The Modal -->
-              <div id="modal>" class="modal">
-  <!-- Modal content -->
-                <div class="modal-content">
-                  <span class="close">&times;</span>
-                    <%= t.key_results %>
-                      <br>
-                      <br>
-                      <p> Example </p>
-                      <%= cl_image_tag t.photo, height: 300, width: 400, crop: :fill %>
-                </div>
-              </div>
-          <% end %>
-<!-- Trigger/Open The Modal -->
-            <p id="button" class="test">Add Tasks</p>
-<!-- The Modal -->
-              <div id="taskModal" class="modal">
-  <!-- Modal content -->
-                <div class="modal-content">
-                  <span class="close">&times;</span>
-                    <%= simple_form_for @task do |f| %>
-                      <%= f.input :objective %>
-                      <%= f.input :key_results %>
-                      <%= f.input :mandatory %>
-                      <% @list = current_parent.children.map do |child| %>
-                      <% [child.id, child.email] %>
-                      <% end %>
-                        <%= f.input :child_id, collection: @list , label_method: :second, value_method: :first %>
-                      <%= f.input :photo %>
-                      <%= f.input :photo_cache, as: :hidden %>
-                      <%= f.submit 'Add Task' %>
-                    <% end %>
-                </div>
-
-              </div>
-            </div>
-          </div>
-        </div>
-      <div class="col-xs-6 col-md-4">
-        <div class="rewards-info">
-          <h3>Rewards:</h3>
-            <div class="container">
-              <% @rewards.each do |r| %>
-                  <%= r.name %>
-              <% end %>
-            <p id="button" class="test">Add Rewards</p>
-<!-- The Modal -->
-          <div id="taskModal" class="modal">
-  <!-- Modal content -->
+          <!-----button---->
+          <p id="button" class="test">
+            <%= t.objective %>
+          </p>
+          <!-- The Modal -->
+          <div id="modal>" class="modal">
+            <!-- Modal content -->
             <div class="modal-content">
               <span class="close">&times;</span>
-                <%= simple_form_for [@reward] do |f| %>
-                <%= f.input :name , label: 'Reward'%>
-                <%= f.input :details %>
-                <%= f.input :price , label: 'Points needed'%>
-                <%= f.input :child_id, collection: @list , label_method: :second, value_method: :first %>
-                <%= f.button :button, type: :submit %>
-                <% end %>
+              <%= t.key_results %>
+              <br>
+              <br>
+              <p> Example </p>
+              <%= cl_image_tag t.photo, height: 300, width: 400, crop: :fill %>
             </div>
           </div>
-        </div>
+          <% end %>
+          <!-- Trigger/Open The Modal -->
+          <p id="button" class="test">Add Tasks</p>
+          <!-- The Modal -->
+          <div id="taskModal" class="modal">
+            <!-- Modal content -->
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <%= simple_form_for @task do |f| %>
+              <%= f.input :objective %>
+              <%= f.input :key_results %>
+              <%= f.input :mandatory %>
+              <% @list = current_parent.children.map do |child| %>
+              <% [child.id, child.email] %>
+              <% end %>
+              <%= f.input :child_id, collection: @list , label_method: :second, value_method: :first %>
+              <%= f.input :photo %>
+              <%= f.input :photo_cache, as: :hidden %>
+              <%= f.submit 'Add Task' %>
+              <% end %>
+            </div>
+          </div>
       </div>
-        <div class="children-info">
-          <div class="btn-add-child">
-            <%= link_to new_child_path do %>
-              Add a child
-            <% end %>
+    </div>
+  </div>
+  <div class="col-xs-6 col-md-4">
+    <div class="childrens-list">
+      <ul>
+        <% current_parent.children.each do |child| %>
+        <li>
+        <div class="card">
+          <div class="card-category"><h2><%= child.name %></h2></div>
+            <% child.tasks.each do |task| %>
+          <div class="card-description">
+            <h2><%= task.objective %></h2>
+            <p><%= task.key_results %></p>
           </div>
-            <div class="childrens-list">
-              <ul>
-                <% current_parent.children.each do |child| %>
-                <li>
-                    <p>Child: <%= child.email %></p>
-                      <% child.tasks.each do |task| %>
-                     <p>Task: <%= task.objective %></p>
-                     <% end %>
-                </li>
-                <% end %>
-                </ul>
-              </div>
-            </div>
-          </div>
+          <% end %>
         </div>
-
-
-
-
+        </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</div>
 <!------------------------------------------->
-
 <script>
-  let modal = document.getElementsByClassName('modal');
+let modal = document.getElementsByClassName('modal');
 
 // Get the button that opens the modal
 // let btn = document.getElementById("btn-task-modal");
@@ -135,24 +108,26 @@
 let test = document.querySelectorAll(".test")
 
 let myFunction = function(i) {
-   modal[i].style.display = "block";
+  modal[i].style.display = "block";
 };
 
 for (let i = 0; i < test.length; i++) {
-    test[i].onclick = function(event) {
-      console.log(event.target)
-      myFunction(Array.from(test).indexOf(event.target))};
+  test[i].onclick = function(event) {
+    console.log(event.target)
+    myFunction(Array.from(test).indexOf(event.target))
+  };
 }
 
 let closes = document.querySelectorAll(".close")
 
 let closeModal = function(i) {
-   modal[i].style.display = "none";
+  modal[i].style.display = "none";
 };
 
 for (let i = 0; i < closes.length; i++) {
-    closes[i].onclick = function(event) {
-      closeModal(Array.from(closes).indexOf(event.target))};
+  closes[i].onclick = function(event) {
+    closeModal(Array.from(closes).indexOf(event.target))
+  };
 }
 
 
@@ -163,7 +138,4 @@ for (let i = 0; i < closes.length; i++) {
 //     let popup = document.getElementById("myPopup");
 //     popup.classList.toggle("show");
 // }
-
 </script>
-
-
