--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="homepage-banner" style="background-image: url('<%= image_path 'painful_grownup' %>')">
+<div class="homepage-banner" style="background-image: url('<%= cl_image_path 'painful_grownup' %>')">
 
   <div class="container banner-text">
 <h3>Working hard to become a better parent?</h3>
@@ -17,7 +17,7 @@ Get Started
         <!-- one col is one photo or one text box -->
         <div class="img-text-combo">
             <div class="col-xs-12 col-sm-6">
-                <%= image_tag 'chicken_teamwork.gif', class: 'img-gifs' %>
+                <%= cl_image_tag 'chicken_teamwork.gif', class: 'img-gifs' %>
             </div>
             <div class="col-xs-12 col-sm-6">
                 <div class="text-card">
@@ -37,7 +37,7 @@ Get Started
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6">
-                <%= image_tag 'playful_grownup.gif', class: 'img-gifs' %>
+                <%= cl_image_tag 'playful_grownup.gif', class: 'img-gifs' %>
             </div>
         </div>
     </div>
@@ -47,7 +47,7 @@ Get Started
     <div class="row">
         <div class="img-text-combo">
             <div class="col-xs-12 col-sm-6">
-                <%= image_tag 'better_parent.gif', class: 'img-gifs' %>
+                <%= cl_image_tag 'better_parent.gif', class: 'img-gifs' %>
             </div>
             <div class="col-xs-12 col-sm-6">
                 <div class="text-card">
