--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-wagon">
     <!-- Logo -->
     <%= link_to root_path, class: "site-logo" do %>
-    <%= image_tag "logo.png" %>
+    <%= cl_image_tag "logo.png" %>
     <% end %>
     <!-- Right Navigation -->
     <div class="navbar-wagon-right hidden-xs hidden-sm">
