--- a/app/views/parents/dashboard.html.erb
+++ b/app/views/parents/dashboard.html.erb
@@ -2,81 +2,109 @@
 <!-- add child button, children list with status -->
 <!-- create task button, mandatory tasks list -->
 <!-- create reward button, daily rewards list  -->
-
-<div class="row">
-  <div class="col-xs-6 col-md-4">
-    <h2>Welcome!</h2>
-    <h5>(<%= current_parent.email %>)</h5>
-    <%= render 'addchild' %>
-    <%= render 'rewards' %>
-  </div>
-  <div class="col-xs-6 col-md-4">
-    <div class="tasks-info">
-      <h3>Tasks:</h3>
-      <div class="container">
-        <ul>
-          <%  @tasks.each do |t| %>
-          <!-----button---->
-          <p id="button" class="test">
-            <%= t.objective %>
-          </p>
-          <!-- The Modal -->
-          <div id="modal>" class="modal">
-            <!-- Modal content -->
-            <div class="modal-content">
-              <span class="close">&times;</span>
-              <%= t.key_results %>
-              <br>
-              <br>
-              <p> Example </p>
-              <%= cl_image_tag t.photo, height: 300, width: 400, crop: :fill %>
-            </div>
-          </div>
-          <% end %>
-          <!-- Trigger/Open The Modal -->
-          <p id="button" class="test">Add Tasks</p>
-          <!-- The Modal -->
-          <div id="taskModal" class="modal">
-            <!-- Modal content -->
-            <div class="modal-content">
-              <span class="close">&times;</span>
-              <%= simple_form_for @task do |f| %>
-              <%= f.input :objective %>
-              <%= f.input :key_results %>
-              <%= f.input :mandatory %>
-              <% @list = current_parent.children.map do |child| %>
-              <% [child.id, child.email] %>
-              <% end %>
-              <%= f.input :child_id, collection: @list , label_method: :second, value_method: :first %>
-              <%= f.input :photo %>
-              <%= f.input :photo_cache, as: :hidden %>
-              <%= f.submit 'Add Task' %>
-              <% end %>
-            </div>
-          </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-6 col-md-4">
-    <div class="childrens-list">
-      <ul>
-        <% current_parent.children.each do |child| %>
-        <li>
-        <div class="card">
-          <div class="card-category"><h2><%= child.name %></h2></div>
-            <% child.tasks.each do |task| %>
-          <div class="card-description">
-            <h2><%= task.objective %></h2>
-            <p><%= task.key_results %></p>
-          </div>
-          <% end %>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 col-md-4">
+            <h2>Welcome!</h2>
+            <h5><%= current_parent.name %> (<%= current_parent.email %>)</h5>
         </div>
-        </li>
-        <% end %>
-      </ul>
+        <div class="col-xs-6 col-md-4">
+            <div class="tasks-info">
+                <h3>Tasks:</h3>
+                <div class="container">
+                    <ul>
+                        <%  @tasks.each do |t| %>
+                        <!-----button---->
+                        <p id="button" class="test">
+                            <%= t.objective %>
+                        </p>
+                        <!-- The Modal -->
+                        <div id="modal>" class="modal">
+                            <!-- Modal content -->
+                            <div class="modal-content">
+                                <span class="close">&times;</span>
+                                <%= t.key_results %>
+                                <br>
+                                <br>
+                                <p> Example </p>
+                                <%= cl_image_tag t.photo, height: 300, width: 400, crop: :fill %>
+                            </div>
+                        </div>
+                        <% end %>
+                        <!-- Trigger/Open The Modal -->
+                        <p id="button" class="test">Add Tasks</p>
+                        <!-- The Modal -->
+                        <div id="taskModal" class="modal">
+                            <!-- Modal content -->
+                            <div class="modal-content">
+                                <span class="close">&times;</span>
+                                <%= simple_form_for @task do |f| %>
+                                <%= f.input :objective %>
+                                <%= f.input :key_results %>
+                                <%= f.input :mandatory %>
+                                <% @list = current_parent.children.map do |child| %>
+                                <% [child.id, child.email] %>
+                                <% end %>
+                                <%= f.input :child_id, collection: @list , label_method: :second, value_method: :first %>
+                                <%= f.input :photo %>
+                                <%= f.input :photo_cache, as: :hidden %>
+                                <%= f.submit 'Add Task' %>
+                                <% end %>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-6 col-md-4">
+            <%= render 'rewards' %>
+        </div>
+        <div class="col-xs-12">
+            <h2>Children</h2>
+            <div class="children-info">
+                <%= render 'addchild' %>
+                <div class="childrens-list">
+                    <ul>
+                        <% current_parent.children.each do |child| %>
+                        <li>
+                            <h5><%= child.name %></h5>
+                            <div class="container">
+                                <% child.tasks.each do |task| %>
+                                <h5><%= icon('fas', 'chevron-right') %> <%= task.objective %></h5>
+                                <% if task.task_submissions.any? %>
+                                <% task.task_submissions.each do |submission| %>
+                                <div class="container">
+                                    <!-- buttons to approve/disapprove -->
+                                    <% if submission.state == 0 %>
+                                    <span>
+                                    <%= link_to task_task_submission_path(task, submission, approved: true), remote: true, method: :patch do %>
+                                    <%= icon('fas', 'check') %> Approve
+                                    <% end %></span>
+                                    <span>
+                                      <%= link_to task_task_submission_path(task, submission, approved: false), remote: true, method: :patch do %>
+                                      <%= icon('fas', 'times') %> Disapprove
+                                      <% end %></span>
+                                    <% else %>
+                                    <%= submission.state > 0 ? "- Approved" : "- Disapproved" %>
+                                    <% end %>
+                                    <!--  -->
+                                    <p>
+                                        <%= submission.comment %>
+                                    </p>
+                                    <% if submission.photo %>
+                                    <%= submission.photo %>
+                                    <% end %>
+                                </div>
+                                <% end %>
+                                <% end %>
+                                <% end %>
+                            </div>
+                        </li>
+                        <% end %>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-
 </div>
 <!------------------------------------------->
 <script>
@@ -110,26 +138,26 @@ let modal = document.getElementsByClassName('modal');
 let test = document.querySelectorAll(".test")
 
 let myFunction = function(i) {
-  modal[i].style.display = "block";
+    modal[i].style.display = "block";
 };
 
 for (let i = 0; i < test.length; i++) {
-  test[i].onclick = function(event) {
-    console.log(event.target)
-    myFunction(Array.from(test).indexOf(event.target))
-  };
+    test[i].onclick = function(event) {
+        console.log(event.target)
+        myFunction(Array.from(test).indexOf(event.target))
+    };
 }
 
 let closes = document.querySelectorAll(".close")
 
 let closeModal = function(i) {
-  modal[i].style.display = "none";
+    modal[i].style.display = "none";
 };
 
 for (let i = 0; i < closes.length; i++) {
-  closes[i].onclick = function(event) {
-    closeModal(Array.from(closes).indexOf(event.target))
-  };
+    closes[i].onclick = function(event) {
+        closeModal(Array.from(closes).indexOf(event.target))
+    };
 }
 
 
